Added English Doc. Did some small Cleaning. Added File Based Data for the Select (mods.json, no Editing of Index if a Mod is added :D). Pls also look at the Todos I added.

--- a/search.css
+++ b/search.css
@@ -1,3 +1,4 @@
+/* TODO PLS Change Doc to Eng. thx*/
 .search-wrapper {
     display: flex; /* kannst du ändern aber so lassen ist schöner */
     flex-direction: column;  /* kannst du ändern aber so lassen ist schöner */
